youfull/objects/Sales_Org_Summary__c.object
<CustomObject>
    <fields>
        <fullName>TITL_2_STF_My_Actions_CNT__c</fullName>
        <label>AUM My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_PLAN_CNT__c</fullName>
        <label>Title 2 - plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_PLAN_SPPY_CNT__c</fullName>
        <label>Title 2 - SPPY Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_RES_CNT__c</fullName>
        <formula>IF(TITL_2_STF_PLAN_CNT__c == 0, 0, TITL_2_STF_CNT__c / TITL_2_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title 2 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_SPPY_CNT__c</fullName>
        <label>Title 2 - SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_STF_VAR_CNT__c</fullName>
        <formula>IF(TITL_2_STF_PLAN_CNT__c == 0, 0, TITL_2_STF_CNT__c / TITL_2_STF_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title 2 Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_BASE_TAR_CNT__c</fullName>
        <label>TITL_2_TL_STF_BASE_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_BASE_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_2_TL_STF_BASE_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_CNT__c</fullName>
        <label>TITL_2_TL_STF_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_RSNG_STR_CNT__c</fullName>
        <label>TITL_2_TL_STF_RSNG_STR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_TAR_CNT__c</fullName>
        <label>TITL_2_TL_STF_TAR_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_2_TL_STF_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>TITL_2_TL_STF_TAR_LAST_CMPGN_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_1_CNT__c</fullName>
        <label>Seller level 1 - count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_1_FAST_TRACK_CNT__c</fullName>
        <label>Seller level 1 - fast track</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_1_TAR2_CNT__c</fullName>
        <label>Seller level 1 - at risk2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_1_TAR_CNT__c</fullName>
        <label>Seller level 1 - at risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_2_CNT__c</fullName>
        <label>Seller level 2 - count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_2_FAST_TRACK_CNT__c</fullName>
        <label>Seller level 2 - fast track</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_2_TAR2_CNT__c</fullName>
        <label>Seller level 2 - at risk2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_3_CNT__c</fullName>
        <label>Seller level 3 - count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_LVL_3_FAST_TRACK_CNT__c</fullName>
        <label>Seller level 3 - fast track</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_ACTV_REP_CNT__c</fullName>
        <formula>ACTV_REP_CNT__c + ORD_SUBMTD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. Reps Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_NET_SLS_AMT__c</fullName>
        <formula>NET_SLS_INVC_AMT__c +  NET_SLS_SMTB_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_CNT__c</fullName>
        <label>Actual UPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_DIV_RNK_CNT__c</fullName>
        <label>UPR division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_LCA_CNT__c</fullName>
        <label>UPR Last Campaign Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPR_My_Actions_CNT__c</fullName>
        <label>UPR My Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPR_My_Actions_CNT_del__c</fullName>
        <label>UPR (unit per rep) My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPR_PLAN_CNT__c</fullName>
        <label>UPR (unit per rep) plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_PLAN_SPPY_CNT__c</fullName>
        <label>UPR (unit per rep) sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_RES_CNT__c</fullName>
        <formula>IF(UPR_PLAN_CNT__c == 0, 0, UPR_CNT__c / UPR_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPR (unit per rep) actual Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UPR_SPPY_CNT__c</fullName>
        <label>UPR (unit per rep) sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPR_VAR_CNT__c</fullName>
        <formula>IF(UPR_PLAN_CNT__c == 0, 0, UPR_CNT__c / UPR_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPR (unit per rep) actual Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UPR_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(UPR_PLAN_CNT__c - UPR_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPR (unit per rep)  Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR__c</fullName>
        <label>Zone Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Zone Summary</relationshipLabel>
        <relationshipName>Zone_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Org Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_SUMRY_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>Analysis_Done__c</columns>
        <columns>Num_Campaign_Stars__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</field>
            <operation>equals</operation>
            <value>7319694999</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_data</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_SUMRY_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>Analysis_Done__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLD_SLS_CMPGN_NR__c</field>
            <operation>equals</operation>
            <value>201313</value>
        </filters>
        <label>All, with data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Core_Market_Dumy_Data</fullName>
        <columns>NAME</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_KEY__c</field>
            <operation>equals</operation>
            <value>999</value>
        </filters>
        <label>Core Market Dumy Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DEMO</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_SUMRY_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>Analysis_Done__c</columns>
        <columns>Num_Campaign_Stars__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</field>
            <operation>startsWith</operation>
            <value>999</value>
        </filters>
        <label>DEMO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MX</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_SUMRY_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>Analysis_Done__c</columns>
        <columns>Num_Campaign_Stars__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</field>
            <operation>startsWith</operation>
            <value>55</value>
        </filters>
        <label>MX</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Metro_South_Believers_20x</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>NET_SLS_INVC_AMT__c</columns>
        <columns>NET_SLS_SMTB_AMT__c</columns>
        <columns>TOTAL_NET_SLS_AMT__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>IS_CURR_CMPGN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLS_ORG_DESC_TXT__c</field>
            <operation>contains</operation>
            <value>201,202,203,204,205,206,207,208,METRO SOUTH BELIEVERS</value>
        </filters>
        <filters>
            <field>IS_CURR_CMPGN__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>Metro South Believers - 20x</label>
        <language>en_PH</language>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <columns>SLS_ORG_SUMRY_KEY__c</columns>
        <columns>SLS_ORG_LVL_DESC_TXT__c</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_DESC_TXT__c</columns>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>ZONE_MGR__c</columns>
        <columns>OPERTNL_CMPGN_NR__c</columns>
        <columns>FLD_SLS_CMPGN_NR__c</columns>
        <columns>MRKT_KEY__c</columns>
        <columns>Analysis_Done__c</columns>
        <columns>Num_Campaign_Stars__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</field>
            <operation>startsWith</operation>
            <value>73</value>
        </filters>
        <filters>
            <field>SLS_ORG_LVL_DESC_TXT__c</field>
            <operation>equals</operation>
            <value>Z</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Org Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Org Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>